--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Guilherme Defreitas Juraszek <guilherme.defreitas@gmail.com>",
   "description": "Blog simples",
 
-  "main": "./blog",
+  "main": "./app",
 
   "dependencies" : {
     "jade"   :  "*",
@@ -20,6 +20,6 @@
   
   "license": "MIT",
   "engine": {
-    "node": "0.8.x"
+    "node": "0.6.x"
   }
 }
