Alterada versoes de dependencias

--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   "main": "./app",
 
   "dependencies" : {
-    "jade"   :  "*",
+    "jade"   :  ">=0.26.3",
     "express" :  "2.5.x",
-    "connect-assets" : "*",
-    "less" : "*",
-    "coffee-script" : "*",
+    "connect-assets" : ">=2.2.1",
+    "less" : ">=1.3.0",
+    "coffee-script" : ">=1.3.3",
     "formidable" : "*",
     "zlib" : "*"
   },
