Box shadow posts at index and show posts page

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mongodb" : ">=1.0.2",
     "mongojs" : ">= 0.4.3",
     "mongoose" : "*",
-    "github-flavored-markdown" : "*"
+    "github-flavored-markdown" : "*",
+    "moment" : "*"
   },
 
   "bundleDependencies": [
