--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "mongoose" : "*",
     "github-flavored-markdown" : "*",
     "moment" : "*",
-    "rss" : "*"
+    "rss" : "*",
+    "nodemailer" : "*",
+    "email-templates" : "*"
   },
 
   "bundleDependencies": [
