--- a/config.coffee.sample
+++ b/config.coffee.sample
@@ -15,3 +15,5 @@ exports.author_twitter_url = 'http://twitter.com/author'
 exports.author_linkedin_url = 'http://www.linkedin.com/pub/author_url'
 exports.author_github_url = 'https://github.com/author'
 exports.author_skype_url = 'callto://skype_author_username'
+
+exports.crypto_key = 'e981739hdkdfasdfknasdfiu9823oa0sdf9023o4f' #change it in production
