Add pagination to the blog main page

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "moment" : "*",
     "rss" : "*",
     "gzippo" : "*",
-    "crypto" : "*"
+    "crypto" : "*",
+    "underscore" : "*"
   },
 
   "bundleDependencies": [
