--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 
   "dependencies" : {
     "jade"   :  ">=0.26.3",
-    "express" :  "2.5.x",
+    "express" :  ">=2.5.x",
     "connect-assets" : ">=2.2.1",
     "less" : ">=1.3.0",
     "coffee-script" : ">=1.3.3",
@@ -18,7 +18,7 @@
     "mongodb" : ">=1.0.2",
     "mongojs" : ">= 0.4.3",
     "mongoose" : "*",
-    "github-flavored-markdown" : "*",
+    "marked" : "*",
     "moment" : "*",
     "rss" : "*",
     "gzippo" : "*",
@@ -34,7 +34,7 @@
   
   "license": "MIT",
   "engines": {
-    "node": "0.8.1",
+    "node": ">=0.8.1",
     "npm" : "1.1.9"
   }
 }
