--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   
   "license": "MIT",
   "engines": {
-    "node": "<0.10.0",
-    "npm" : "=1.3.4"
+    "node": "<0.10.20",
+    "npm" : ">=1.3.4"
   }
 }
