--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "guilherme-blog",
   "preferGlobal": "true",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "author": "Guilherme Defreitas Juraszek <guilherme.defreitas@gmail.com>",
-  "description": "Blog simples",
+  "description": "Simple blog system",
 
   "main": "./app",
 
@@ -34,7 +34,7 @@
   
   "license": "MIT",
   "engines": {
-    "node": "<0.10.20",
+    "node": ">=0.10.20",
     "npm" : ">=1.3.4"
   }
 }
